updated screenshots and readme